syntax = "proto3";
package proto;

message StringQuery {
	oneof operator {
		string equals = 1;
		string not_equals = 2;
	}
}
